--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@toast-ui/react-editor": "^3.2.0",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
