feat: 이미지 사이즈 조절

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "12.2.4",
+    "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module-react": "^3.0.0",
+    "quill-image-resize-module-ts": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0",
