--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^0.27.2",
     "next": "12.2.4",
     "quill-image-resize": "^3.0.9",
     "quill-image-resize-module-react": "^3.0.0",
