--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.1.8",
+    "tailwindcss-cli": "^0.1.2",
     "typescript": "4.7.4"
   }
 }
