--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/error-message": "^2.0.0",
     "axios": "^0.27.2",
     "next": "12.2.4",
     "quill-image-resize": "^3.0.9",
@@ -19,6 +20,7 @@
     "quill-image-resize-module-ts": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-quill": "^2.0.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
