--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
     "react-quill": "^2.0.0",
+    "recoil": "^0.7.5",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
