--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/error-message": "^2.0.0",
     "axios": "^0.27.2",
     "next": "12.2.4",
+    "next-auth": "^4.10.3",
     "quill-image-resize": "^3.0.9",
     "quill-image-resize-module-react": "^3.0.0",
     "quill-image-resize-module-ts": "^3.0.3",
