--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/error-message": "^2.0.0",
+    "@types/react-cookies": "^0.1.0",
     "axios": "^0.27.2",
     "next": "12.2.4",
     "next-auth": "^4.10.3",
@@ -20,6 +21,7 @@
     "quill-image-resize-module-react": "^3.0.0",
     "quill-image-resize-module-ts": "^3.0.3",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
     "react-quill": "^2.0.0",
